[project]
name = "purr-petra-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "psutil>=7.0.0",
    "pyodbc>=5.2.0",
    "typer>=0.16.0",
]
[project.scripts]
purr-petra-cli = "purr_petra_cli.cli:app"
